@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-08-08T01:37:01Z",
-  "count_outdated" : 4202,
-  "uniques_outdated" : 750,
-  "count" : 4245,
-  "uniques" : 757,
+  "timestamp" : "2024-08-09T01:38:09Z",
+  "count_outdated" : 4212,
+  "uniques_outdated" : 752,
+  "count" : 4250,
+  "uniques" : 758,
   "views" : [
-    {
-      "timestamp": "2024-07-25T00:00:00Z",
-      "count": 10,
-      "count_minmax": [ 10, 10 ],
-      "count_decinc": [ 0, 10 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2024-07-26T00:00:00Z",
       "count": 2,
@@ -55,6 +46,15 @@
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-08-08T00:00:00Z",
+      "count": 5,
+      "count_minmax": [ 5, 5 ],
+      "count_decinc": [ 0, 5 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
