@@ -1,12 +1,7 @@
 {
-  "count": 43,
+  "count": 38,
   "uniques": 6,
   "views": [
-    {
-      "timestamp": "2024-07-25T00:00:00Z",
-      "count": 10,
-      "uniques": 2
-    },
     {
       "timestamp": "2024-07-26T00:00:00Z",
       "count": 2,
@@ -30,6 +25,11 @@
     {
       "timestamp": "2024-08-07T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-08-08T00:00:00Z",
+      "count": 5,
       "uniques": 1
     }
   ]
